@@ -19,7 +19,6 @@ package org.apache.lucene.luke.app.desktop.util;
 
 import java.util.List;
 import java.util.function.IntFunction;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import javax.swing.JList;
 import javax.swing.ListModel;
@@ -34,7 +33,7 @@ public class ListUtils {
 
   public static <T, R> List<R> getAllItems(JList<T> jlist, IntFunction<R> mapFunc) {
     ListModel<T> model = jlist.getModel();
-    return IntStream.range(0, model.getSize()).mapToObj(mapFunc).collect(Collectors.toList());
+    return IntStream.range(0, model.getSize()).mapToObj(mapFunc).toList();
   }
 
   private ListUtils() {}
